Modify Lambda function to handle increased concurrent executions
- Upgrade runtime to Python 3.9 for better performance
- Increase memory to 256MB and timeout to 30s for high load
- Optimize Lambda code with error handling and safe data access

--- a/template.yaml
+++ b/template.yaml
@@ -53,10 +53,12 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: add.lambda_handler
-      Runtime: python3.8
+      Runtime: python3.9
       CodeUri: ./lambdas/add
       Description: Add
       AutoPublishAlias: live
+      MemorySize: 256
+      Timeout: 30
 
   CleanInputLambdaFunction:
     Type: AWS::Serverless::Function
