--- a/template.yaml
+++ b/template.yaml
@@ -69,7 +69,7 @@ Resources:
       CodeUri: ./lambdas/add
       Description: Add
       AutoPublishAlias: live
-      ReservedConcurrencyLimit: 100
+      ReservedConcurrency: 100
 
   CleanInputLambdaFunction:
     Type: AWS::Serverless::Function
@@ -79,7 +79,7 @@ Resources:
       CodeUri: ./lambdas/cleaninput
       Description: Clean Input
       AutoPublishAlias: live
-      ReservedConcurrencyLimit: 50
+      ReservedConcurrency: 50
 
   DivideLambdaFunction:
     Type: AWS::Serverless::Function
@@ -89,7 +89,7 @@ Resources:
       CodeUri: ./lambdas/divide
       Description: Divide
       AutoPublishAlias: live
-      ReservedConcurrencyLimit: 50
+      ReservedConcurrency: 50
 
   MultiplyLambdaFunction:
     Type: AWS::Serverless::Function
@@ -99,7 +99,7 @@ Resources:
       CodeUri: ./lambdas/multiply
       Description: Multiply
       AutoPublishAlias: live
-      ReservedConcurrencyLimit: 50
+      ReservedConcurrency: 50
 
   SubtractLambdaFunction:
     Type: AWS::Serverless::Function
@@ -109,7 +109,7 @@ Resources:
       CodeUri: ./lambdas/subtract
       Description: Subtract
       AutoPublishAlias: live
-      ReservedConcurrencyLimit: 50
+      ReservedConcurrency: 50
 
   StateMachine:
     Type: AWS::Serverless::StateMachine
