Use ProvisionedConcurrencyConfig for increased concurrency handling

--- a/template.yaml
+++ b/template.yaml
@@ -69,7 +69,8 @@ Resources:
       CodeUri: ./lambdas/add
       Description: Add
       AutoPublishAlias: live
-      ReservedConcurrency: 100
+      ProvisionedConcurrencyConfig:
+        ProvisionedConcurrencyExecutions: 10
 
   CleanInputLambdaFunction:
     Type: AWS::Serverless::Function
@@ -79,7 +80,6 @@ Resources:
       CodeUri: ./lambdas/cleaninput
       Description: Clean Input
       AutoPublishAlias: live
-      ReservedConcurrency: 50
 
   DivideLambdaFunction:
     Type: AWS::Serverless::Function
@@ -89,7 +89,6 @@ Resources:
       CodeUri: ./lambdas/divide
       Description: Divide
       AutoPublishAlias: live
-      ReservedConcurrency: 50
 
   MultiplyLambdaFunction:
     Type: AWS::Serverless::Function
@@ -99,7 +98,6 @@ Resources:
       CodeUri: ./lambdas/multiply
       Description: Multiply
       AutoPublishAlias: live
-      ReservedConcurrency: 50
 
   SubtractLambdaFunction:
     Type: AWS::Serverless::Function
@@ -109,7 +107,6 @@ Resources:
       CodeUri: ./lambdas/subtract
       Description: Subtract
       AutoPublishAlias: live
-      ReservedConcurrency: 50
 
   StateMachine:
     Type: AWS::Serverless::StateMachine
