Add CloudWatch monitoring alarms for API Gateway and Lambda functions
- Added ApiGatewayErrorRateAlarm for 4XX error monitoring
- Added ApiGatewayLatencyAlarm for response time monitoring
- Added LambdaErrorRateAlarm for Lambda function error tracking
- Added LambdaDurationAlarm for Lambda execution time monitoring
- Alarms configured with appropriate thresholds and evaluation periods

--- a/template.yaml
+++ b/template.yaml
@@ -146,3 +146,68 @@ Resources:
             Action:
               - lambda:InvokeFunction
             Resource: '*'
+
+  # CloudWatch Alarms for Monitoring
+  ApiGatewayErrorRateAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ${AWS::StackName}-api-error-rate
+      AlarmDescription: API Gateway 4XX error rate alarm
+      MetricName: 4XXError
+      Namespace: AWS/ApiGateway
+      Statistic: Sum
+      Period: 300
+      EvaluationPeriods: 2
+      Threshold: 10
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: ApiName
+          Value: !Ref Name
+
+  ApiGatewayLatencyAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ${AWS::StackName}-api-latency
+      AlarmDescription: API Gateway latency alarm
+      MetricName: Latency
+      Namespace: AWS/ApiGateway
+      Statistic: Average
+      Period: 300
+      EvaluationPeriods: 2
+      Threshold: 5000
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: ApiName
+          Value: !Ref Name
+
+  LambdaErrorRateAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ${AWS::StackName}-lambda-errors
+      AlarmDescription: Lambda function error rate alarm
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Statistic: Sum
+      Period: 300
+      EvaluationPeriods: 2
+      Threshold: 5
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref AddLambdaFunction
+
+  LambdaDurationAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ${AWS::StackName}-lambda-duration
+      AlarmDescription: Lambda function duration alarm
+      MetricName: Duration
+      Namespace: AWS/Lambda
+      Statistic: Average
+      Period: 300
+      EvaluationPeriods: 2
+      Threshold: 10000
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref AddLambdaFunction
